--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -121,3 +121,28 @@ p span.i2{
 	text-indent: -1em;
 }
 /* End verse */
+
+/* Personas */
+tr.together{
+	break-inside: avoid;
+}
+
+tr.together td{
+	padding: 0 .5em 0 0;
+	vertical-align: middle;
+}
+
+tr.together td:only-child,
+tr.together td + td{
+	border-left: 1px solid;
+}
+
+.together + .together td[rowspan],
+.together + .together td[rowspan] + td{
+	padding-top: .5em;
+}
+
+[epub|type~="z3998:drama"] .together td:last-child{
+	padding-left: .5em;
+}
+/* End personas */
